@@ -4,6 +4,8 @@ Version 1.7.1
 - BUG: Issue #89: Crash in TSVNCache. (Stefan)
 - BUG: Cursor stayed as busy after an operation
        until it was moved. (Stefan)
+- BUG: Issue #92 : checked item count in 
+       commit dialog is wrong. (Stefan)
 
 Version 1.7.0
 Too many changes to list here. See the release notes for
